update dockerfile and scripts for docker run

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,7 +8,8 @@ RUN apt-get update && \
         git \
         build-essential \
         parted \
-        dosfstools
+        dosfstools \
+        ckermit
 
 COPY ./lab1_package.tar /data/
 COPY ./arm-env /root/.arm-env
@@ -18,3 +19,6 @@ RUN tar -xvf /data/lab1_package.tar && \
     tar -xvjf /data/lab1_package/gcc-linaro-5.3-20170216.tar.bz2 -C / && \
     tar -xvf /data/lab1_package/image_new_v11.tar.bz2 && \
     echo "source /root/.arm-env" >> /root/.bashrc
+
+#COPY ./entrypoint.sh /
+#ENTRYPOINT ["/entrypoint.sh"]
